<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"

    tools:context=".activities.AboutActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_lukas"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="34dp"
        android:src="@drawable/ic_lukas"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_myloc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_lukas" />

    <TextView
        android:id="@+id/tv_lukas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="46dp"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/humble_cafe"
        android:text="@string/my_name"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_myloc"
        app:layout_constraintEnd_toStartOf="@+id/civ_lukas"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_myloc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/myy_location"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/tv_lukas"
        app:layout_constraintTop_toBottomOf="@+id/tv_lukas" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="62dp"
        android:background="@drawable/bg_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/civ_lukas">>

        <TextView
            android:id="@+id/tv_title_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:gravity="start"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="54dp"
            android:text="@string/tv_title_about"
            android:textColor="@color/colorTextBlack"
            android:textSize="18dp"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_about"
            android:text="@string/detail_about_me"
            android:textColor="@color/colorTextGrey"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/tv_title_about"
            app:layout_constraintTop_toBottomOf="@id/tv_title_about"

            />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="24dp"
            app:cardBackgroundColor="@color/colorBackgroundCard"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_about"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_about"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_about"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="13dp"
                    android:text="@string/my_email"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_email_lukas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/email_lukas"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tv_email"
                    app:layout_constraintTop_toBottomOf="@+id/tv_email" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>