<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_gradient"
        tools:context=".activities.DetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp">

            <!-- <FrameLayout
                 android:id="@+id/fl_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layout_constraintTop_toTopOf="parent">

                 <ImageView
                     android:id="@+id/iv_img_header"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
                     android:foreground="@color/colorForegroundBlack"
                     android:src="@drawable/img_tanamera" />

                 <TextView
                     android:id="@+id/tv_title_cafe"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="40dp"
                     android:layout_marginTop="170dp"
                     android:fontFamily="@font/poppins"
                     android:text="@string/tv_cafe_name"
                     android:textColor="@android:color/white"
                     android:textSize="24sp"
                     android:textStyle="bold" />

                 <TextView
                     android:id="@+id/tv_subtitle_cafe"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="40dp"
                     android:layout_marginTop="200dp"
                     android:layout_marginEnd="40dp"
                     android:alpha="0.7"
                     android:fontFamily="@font/poppins"
                     android:text="@string/tv_cafe_subname"
                     android:textColor="@android:color/white"
                     android:textSize="14sp" />

             </FrameLayout>

              -->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fl_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_img_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:foreground="@color/colorForegroundBlack"
                    android:src="@drawable/img_tanamera"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title_cafe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/tv_cafe_name"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tv_subtitle_cafe"
                    app:layout_constraintEnd_toEndOf="@id/tv_subtitle_cafe"
                    app:layout_constraintStart_toStartOf="@id/tv_subtitle_cafe" />

                <TextView
                    android:id="@+id/tv_subtitle_cafe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="40dp"
                    android:alpha="0.7"
                    android:fontFamily="@font/poppins"
                    android:text="@string/tv_cafe_subname"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_star"
                android:fontFamily="@font/poppins"
                android:text="@string/rating"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/fl_header" />

            <TextView
                android:id="@+id/tv_cafe_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="40dp"
                android:alpha="0.8"
                android:drawableLeft="@drawable/ic_pin"
                android:drawablePadding="14dp"
                android:fontFamily="@font/poppins"
                android:text="@string/cafe_address"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

            <View
                android:id="@+id/v_divider"
                style="@style/Divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"

                app:layout_constraintTop_toBottomOf="@id/tv_cafe_address" />

            <TextView
                android:id="@+id/tv_title_about_cafe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:text="@string/about_me"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/v_divider" />

            <TextView
                android:id="@+id/tv_detail_about_cafe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="40dp"
                android:alpha="0.8"
                android:fontFamily="@font/poppins"
                android:text="@string/aboutcafe"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_about_cafe" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="54dp"
                android:layout_marginEnd="40dp"
                android:paddingBottom="40dp"
                app:cardBackgroundColor="@color/colorBackgroundCard"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_about_cafe">

                <TextView
                    android:id="@+id/tv_title_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/review"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_review1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="30dp"
                    android:alpha="0.8"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/detail_review"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>